tests/fcode/errors/err_duplicate_parameter.f90
subroutine dup_param()
  integer, parameter :: n = 5
  integer, parameter :: n = 10
end subroutine dup_param
